test/e2e/testdata/ratelimit-global-shared-gateway-cost.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-shared-cost-ratelimit
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http-8080
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cost-ratelimit-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: eg-shared-cost-ratelimit
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /foo
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cost-ratelimit-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: eg-shared-cost-ratelimit
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bar
      backendRefs:
        - name: infra-backend-v2
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-shared-gateway-cost
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg-shared-cost-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - headers:
                - name: x-user-id
                  type: Exact
                  value: cost-test
          limit:
            requests: 4
            unit: Hour
          shared: true
          cost:
            request:
              from: Number
              number: 2
